--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: dragable_flutter_list
 description: a dragable flutter list optimized from flutter_list_drag_and_drop.
-version: 0.1.6
-author: Realank <realank@126.com> Norbert Kozsir <kozsir.norbert@gmail.com>
+version: 0.1.7
+author: Realank <realank@126.com>
 homepage: https://github.com/Realank/dragable_flutter_list
 
 environment:
