--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: dragable_flutter_list
-description: a dragable flutter list optimized from flutter_list_drag_and_drop.
-version: 0.1.9
+description: a flutter list view which can drag & move item to change order.
+version: 0.2.0
 author: Realank <realank@126.com>
 homepage: https://github.com/Realank/dragable_flutter_list
 
