--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
-name: dragable_flutter_list
+name: draggable_flutter_list
 description: a flutter list view which can drag & move item to change order.
 version: 1.0.2
 author: Realank <realank@126.com>
-homepage: https://github.com/Realank/dragable_flutter_list
+homepage: https://github.com/Realank/draggable_flutter_list
 
 environment:
   sdk: ">=2.0.0-dev.28.0 <3.0.0"
